update calculat() function

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "react_calculator_cathyli99nz",
+  "name": "react_simple_calculator",
   "alias": "calculator.cathyli99nz.now.sh",
   "builds": [
     {
