--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "mathjs": "^5.0.0",
+    "now": "^16.1.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
